	* Incremented the library version to 3:1:0.
	* Incremented the package version to 0.8.11.
2016-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiApplication::renderPage()' method in
	'src/wh/whcgiapplication.cpp' and 'src/wh/whcgiapplication.h'.
2016-05-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 4:0:1.
	* Incremented the package version to 1.0.0.
2016-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Changed the 'charset' attribute from 'windows-1252' to 'utf-8'
	in src/wh/whcgipage.cpp'.
	* Added 'WHCgiPage::styleSheet()' and 'WHCgiPage::setStyleSheet()'
	methods in 'src/wh/whcgipage.cpp' and 'src/wh/whcgipage.h'.
2016-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous include statements.
2016-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 5:0:2.
	* Incremented the package version to 1.1.0.
2016-09-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'configure.ac'.
2016-09-14 Fred Gleason <fredg@paravelsystems.com>
	* Added 'Method::Put' and 'Method::Delete' values to the
	'WHHttpConnection::Method enumeration in 'src/wh/whhttpconnection.h'.
	* Added a 'WHHttpServer::getRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::postRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::headRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::putRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added a 'WHHttpServer::deleteRequestReceived()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-09-16 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'
	* Updated 'INSTALL'
	* Updated 'NEWS'
	* Incremented the library version to 6:0:3.
	* Incremented the package version to 1.2.0.